Remove stickypanel and .header element, make #Panel fixed and add padding to #content. Fixes jerky behaviour and the 1px top spacing.

--- a/public/css/airtime/styles.css
+++ b/public/css/airtime/styles.css
@@ -1050,12 +1050,6 @@ dt.block-display, dd.block-display {
 	width:100%;
 }
 
-.floated-panel {
-	margin-top:0;
-	width:99.99%;
-	z-index:999;
-}
-
 
 /*---//////////////////// Schedule Show ////////////////////---*/
 
