--- a/styles/css/main.less
+++ b/styles/css/main.less
@@ -10,8 +10,15 @@
 @import 'font-Andika.less';
 @import 'font-Arvo.less';
 
+#Panel {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    top: 0;
+}
+
 #content {
-    padding-top: 15px;
+    padding-top: 155px;
 }
 
 h1, h2, h3, h4, h5 {
